
Fixed: Minor memory leak on monit reload if multiple pid/ppid tests were defined.

Fixed: HTTP GUI: Don't show the implicit existence test for network check (not used).

Fixed: Issue #143: Ping test may block longer then timeout settings and the event description
in the case of timeout reported value 1000x higher.

Fixed: Issue #144: Websocket protocol test - mask frames per RFC-6455.

Fixed: "monit validate" returns exit value 1 only if there were some errors.


Version 5.11

New: Network tests implemented. You can test the link status (up/down),
link capacity changes (drops due to damaged ports or cables, signal problems, etc.),
link saturation, upload/download bandwidth usage and total transfers, number
of upload/download packets. Example:
    check network public with interface eth0
        if failed link then alert
        if changed link then alert
        if saturation > 80% then alert
        if upload > 500 kB/s then alert
        if download > 1 MB/s then alert
        if upload > 1000 packets/s then alert
        if download > 1000 packets/s then alert
        if total upload > 1 GB in last hour then alert
        if total download > 100 GB in last 5 hours then alert

New: Sieve protocol test implemented. Usage:
    if failed port 2000 protocol sieve then alert

New: The PID and PPID change tests are no longer implicit. If you
want to test the process PID/PPID changes, you have to add this test
explicitly:
    if changed pid then alert
    if changed ppid then alert

New: Multiple PID and PPID tests can be used now. Example:
    if changed PID then alert
    if changed PID 3 times in 5 cycles then stop

Fixed: If the "not every <cron>" option matched, the test was
skipped only once per minute.

Fixed: Issue #114: If the the test is on hold due to the "every" option schedule,
display last status instead of "Waiting".

Fixed: Issue #115: The CLI/GUI reported port timeout value 1000x higher.
